# process-analyst-copilot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  Sandbox.ipynb  behave.ini  cleanup.sh  ollama-sample.py  openai-sample.py  pyproject.toml  sample.py  update.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: agents.yaml  tasks.yaml
developer_notes/: Notes.md  Notes2.md  developer_notes.txt  git_notes.txt
docs/: index.html  process_analyst_copilot.html  search.js
docs/process_analyst_copilot/: SemanticAssert.html  utils.html
outputs/: 1-draftprocess.md  2-assumptions.md  3-questions.md  4-reviewedprocess (before).md  4-reviewedprocess.md  search_results.json
process_analyst_copilot/: SemanticAssert.py  __init__.py  data.py  flow.py  flows.py  test_SemanticAsset.py  utils.py
scripts/: cleanup.sh  gitupdate.sh  local_build.sh  test_ollama.py
src/process_analyst_copilot/: SemanticAssert.py  __init__.py  data.py  sample-gemini.py  sample-ollama.py  utils.py
src/process_analyst_copilot/uml/: activity.puml  class.puml  component.puml  deployment.puml  object.puml  usecase.puml
tests/features/: ClarifyTheAsk.feature
tests/features/steps/: feature_ClarifyTheAsk.py
tests/unit/: doctest_1_draftprocess.md  doctest_3_questions.md  doctest_4_reviewedprocess.md  test_ClarifyTheAsk.py  test_SemanticAssert.py  test_data.py  test_draftprocess.md  test_llm_api.py
tests/unit/process_analyst/: doctest_2_assumptions.md  test_ClarifyTheAsk.py  test_SemanticAssert.py  test_data.py
